--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,15 @@ find_package(glm
              REQUIRED)
 
 set(GLFW D:/glfw-3.3.2.bin.WIN64)
+set(GLM D:/glm)
 
-add_library(geometry STATIC geometry.cpp)
+add_library(geometry STATIC geometry_base.cpp geometry.cpp intersection_finder.cpp)
 add_library(vulkan_visualization STATIC vulkan_drawing.cpp)
 
 target_include_directories(vulkan_visualization PRIVATE
     $ENV{VULKAN_SDK}/Include
     ${GLFW}/include
-    $ENV{GLM}/glm)
+    ${GLM})
 
 target_link_libraries(vulkan_visualization
     $ENV{VULKAN_SDK}/Lib/vulkan-1.lib
