fixing bugs and refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(2 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_CXX_FLAGS "-O3")
+
 find_package(Vulkan REQUIRED)
 find_package(glm
              PATHS D:/glm/cmake/glm
