test generator and some new tests

--- a/Geometry/CMakeLists.txt
+++ b/Geometry/CMakeLists.txt
@@ -5,4 +5,8 @@ project(Lib_geom LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(geometry STATIC geometry_base.cpp geometry.cpp intersection_finder.cpp rotator.cpp)
+add_library(geometry STATIC
+            geometry_base.cpp
+            geometry.cpp
+            intersection_finder.cpp
+            rotator.cpp)
